# python-appcatalogclient

./: .gitreview  .testr.conf  CONTRIBUTING.rst  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
appcatalogclient/: client.py
appcatalogclient/osc/: plugin.py
appcatalogclient/osc/v1/: catalog.py
appcatalogclient/tests/unit/: base.py
appcatalogclient/tests/unit/osc/v1/: fakes.py  test_catalog.py
appcatalogclient/tests/unit/v1/: test_catalog.py
appcatalogclient/v1/: catalog.py  client.py
