[metadata]
name = python-appcatalogclient
summary = OpenStack App Catalog API Client Library
description-file = README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages = appcatalogclient

[entry_points]
openstack.cli.extension =
    appcatalog = appcatalogclient.osc.plugin

openstack.appcatalog.v1 =
    appcatalog_list = appcatalogclient.osc.v1.catalog:ListApps
    appcatalog_show = appcatalogclient.osc.v1.catalog:ShowApp

[pbr]
autodoc_index_modules = True

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[wheel]
universal = 1
